# QtEmu

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  README  README.md  REUSE.toml  ROADMAP.md  config.h  configwindow.cpp  configwindow.h  helpwindow.cpp  helpwindow.h  machineprocess.cpp  machineprocess.h  machinetab.cpp  machinetab.h  machinewizard.cpp  machinewizard.h  main.cpp  mainwindow.cpp  mainwindow.h  meson.build  meson_options.txt  qtemu.desktop  qtemu.pro  qtemu.qrc  qtemu.rc  wizard.cpp  wizard.h
.github/: FUNDING.yml
.github/scripts/: take_screenshots.sh
.github/workflows/: build.yml  release.yml  reuse.yml  screenshots.yml  test-installers.yml
images/os/: LICENSE
src/: aboutwidget.cpp  aboutwidget.h  boot.cpp  boot.h  configwindow.cpp  configwindow.h  helpmanualwidget.h  helpwidget.cpp  helpwidget.h  machine.cpp  machine.h  machineconfigwindow.cpp  machineconfigwindow.h  machineutils.cpp  machineutils.h  machinewizard.cpp  machinewizard.h  main.cpp  mainwindow.cpp  mainwindow.h  media.cpp  media.h  networkadapter.cpp  networkadapter.h  qemu.cpp  qemu.h  systemutils.cpp  systemutils.h
src/components/: customfilter.cpp  customfilter.h
src/export-import/: export.cpp  export.h  exportdetailspage.cpp  exportdetailspage.h  exportgeneralpage.cpp  exportgeneralpage.h  exportmediapage.cpp  exportmediapage.h  import.cpp  import.h  importdestinationpage.cpp  importdestinationpage.h  importdetailspage.cpp  importdetailspage.h  importgeneralpage.cpp  importgeneralpage.h  importmediapage.cpp  importmediapage.h
src/machineconfig/: createbridgedialog.cpp  createbridgedialog.h  machineconfigaccel.cpp  machineconfigaccel.h  machineconfigaudio.cpp  machineconfigaudio.h  machineconfigbios.cpp  machineconfigbios.h  machineconfigboot.cpp  machineconfigboot.h  machineconfigcloudinit.cpp  machineconfigcloudinit.h  machineconfiggeneral.cpp  machineconfiggeneral.h  machineconfiggeneraltabs.cpp  machineconfiggeneraltabs.h  machineconfighardware.cpp  machineconfighardware.h  machineconfighardwaretabs.cpp  machineconfighardwaretabs.h  machineconfigmedia.cpp  machineconfigmedia.h  machineconfignetwork.cpp  machineconfignetwork.h  machineconfigwindow.cpp  machineconfigwindow.h  networkadapterdialog.cpp  networkadapterdialog.h  portforwarddialog.cpp  portforwarddialog.h
src/newmachine/: acceleratorpage.cpp  acceleratorpage.h  conclusionpage.cpp  conclusionpage.h  diskpage.cpp  diskpage.h  generalpage.cpp  generalpage.h  hardwarepage.cpp  hardwarepage.h  machinepage.cpp  machinepage.h  memorypage.cpp  memorypage.h  networkpage.cpp  networkpage.h
src/utils/: cloudinitisoutils.cpp  cloudinitisoutils.h  firstrunwizard.cpp  firstrunwizard.h  logger.cpp  logger.h  networkutils.cpp  networkutils.h  newdiskwizard.cpp  newdiskwizard.h  qtemualerts.cpp  qtemualerts.h  systemutils.cpp  systemutils.h
tests/: CMakeLists.txt  README.md  meson.build  test_cloudinitisoutils.cpp  test_machine_cloudinit.cpp  test_machine_customargs.cpp  test_networkadapter.cpp  test_networkutils.cpp
translations/: template_qtemu_el.ts  template_qtemu_pl.ts  template_qtemu_zh_CN.ts
